--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block bleed
-  header.hero
+  header.index-hero
     img.logo(src="/img/kickstart.png")
     h5 A front-end framework that loves to be extended
 
