--- a/lib/jade/docs/3.x/layout.jade
+++ b/lib/jade/docs/3.x/layout.jade
@@ -3,7 +3,7 @@ extends ../../layout
 block bleed
   include _header
 
-  header.hero
+  header.doc-hero
     block hero-title
     block hero-example
 
