--- a/lib/sass/components/_navbar.sass
+++ b/lib/sass/components/_navbar.sass
@@ -50,7 +50,7 @@
 
     @media screen and (min-width: $breakpoint)
       display: flex
-      align-items: flex-start
+      align-items: center
       flex-wrap: wrap
       justify-content: space-between
       align-content: space-between
