Decoupling navbar-color fn and making  make sense on or off

--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -48,7 +48,7 @@ body
     opacity: 0.8
 
 .docs-nav
-  +navbar($layout: 'fluid-fixed', $background: darken(map-get($colors, blue), 5%), $collapse: true)
+  +navbar($layout: 'fluid-fixed', $background-color: darken(map-get($colors, blue), 5%), $collapse: true)
   top: 45px
   z-index: 1000
   margin-bottom: 0
