--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -196,8 +196,8 @@ hr
 // Navigation
 // ----------
 
-=navbar($layout: 'none', $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false, $fixed: false)
-  +navbar-default($layout, $background, $breakpoint, $collapse, $fixed)
+=navbar($layout: 'none', $background-color: map-get($white, dark), $breakpoint: $tablet, $collapse: false, $fixed: false)
+  +navbar-default($layout, $background-color, $breakpoint, $collapse, $fixed)
 
 =dropdown_menu
   +dropdown_menu-default
