--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -251,7 +251,7 @@
   +navbar
 
   &.navbar-dark
-    +navbar($background-color: map-get($black, lighter))
+    +navbar-color($background-color: map-get($black, lighter))
 
   &.navbar-collapse
     +navbar($collapse: true)
