--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -220,14 +220,8 @@ hr
 // Forms
 // -----
 
-=form
-  +form-default
-
-=form-horizontal
-  +form-horizontal-default
-
-=form-left
-  +form-left-default()
+=form($layout: 'none')
+  +form-default($layout)
 
 =form_group($orientation: 'vertical')
   +form_group-default($orientation)
