--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -3,51 +3,8 @@ label, legend
   font-weight: 500
   margin-bottom: $space/4
 
-%error_message
-  font-style: italic
-  margin:
-    top: 7px
-    bottom: 14px
-
 =form-default($layout: 'none')
   margin-bottom: $space
-
-  .errors, .warnings, .successes
-    p
-      @extend %error_message
-
-  .errors
-    +field-colors(map-get($colors, red))
-
-  .warnings
-    +field-colors(map-get($colors, yellow))
-
-  .successes
-    +field-colors(map-get($colors, green))
-
-  p
-    &.error, &.warning, &.success
-      @extend %error_message
-
-  label, span, p
-    &.error
-      color: map-get($colors, red)
-
-    &.warning
-      color: map-get($colors, yellow)
-
-    &.success
-      color: map-get($colors, green)
-
-  input, select
-    &.error
-      border-color: map-get($colors, red)
-
-    &.warning
-      border-color: map-get($colors, yellow)
-
-    &.success
-      border-color: map-get($colors, green)
 
   @if ($layout == 'horizontal')
     +form-horizontal
@@ -94,6 +51,8 @@ select
   background-image: none
 
 =form-horizontal
+  display: inline-block
+
   label, input
     display: inline-block
 
@@ -117,13 +76,13 @@ select
   margin-bottom: $space
 
   @if $orientation == 'horizontal'
-    display: inline-block
+    display: inherit
     margin:
       right: $space/5
 
     > *
       display: inline-block
-      margin-right: $space/5
+      margin-right: $space/5 
 
   @content
 
