--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -20,6 +20,7 @@ label, legend
   border: 1px solid #CCC
   display: block
   border-radius: 3px
+  max-width: 100%
 
   label + &
     margin-top: ($space/5)
@@ -60,22 +61,24 @@ select
 
 =form-left
   label
+    +root-element
+    padding:
+      right: 0
+      left: 0
     display: inline-block
-    width: 50%
-    text-align: right
-    padding-right: 10px
     margin: 0
-    + input[type="text"]
-      width: 50%
-      display: inline-block
+
+  @media screen and (min-width: $tablet)
+    label:not(.checkbox)
+      text-align: right
 
   @content
 
-=form_group-default($orientation)
+=form_group-default($layout)
   display: block
   margin-bottom: $space
 
-  @if $orientation == 'horizontal'
+  @if $layout == 'horizontal'
     display: inherit
     margin:
       right: $space/5
