--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -223,8 +223,8 @@ hr
 =form($layout: 'none')
   +form-default($layout)
 
-=form_group($orientation: 'vertical')
-  +form_group-default($orientation)
+=form_group($layout: 'vertical')
+  +form_group-default($layout)
 
 // Growls
 // ------
