--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -107,7 +107,7 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
   +measure-columns($columns, "width")
   clear: none
   display: block
-  margin-left: 0
+  // margin-left: 0
 
   @if $right != 0
     +set-offset($right, "margin-right")
