--- a/lib/sass/components/_labels.sass
+++ b/lib/sass/components/_labels.sass
@@ -1,4 +1,4 @@
-=label-default($background-color: map-get($colors, blue))
+=label-default($background-color: $primary-color)
   +root-element
   background: $background-color
   font-size: 0.8rem
