Adding intro text for all component pages

--- a/lib/jade/docs/3.x/ui/alerts/index.jade
+++ b/lib/jade/docs/3.x/ui/alerts/index.jade
@@ -6,6 +6,8 @@ block hero-title
 block basic
   :markdown
     Alerts are simple colored containers with opinionated type hierarchy.
+    These are great for drawing attention within content or showing the 
+    user notices above the page. Alerts styles are reused for showing [growls](/#{docsVersion}/ui/notifications).
 
   .example
     .alert
