--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -47,10 +47,13 @@ block hero-example
         li
           a(href="#") Take a picture
 
-block toc-variations
-
-
 block basic
+  :markdown
+    Buttons are based on the most basic and reused styling in Kickstart.
+    They can easily be placed in navbars and other elements, and can be extended in
+    functionality via dropdowns and sizing.
+
+    Buttons can be created from several elements:
 
   .example
     button.button Sign Up
