--- a/lib/jade/docs/3.x/ui/forms/index.jade
+++ b/lib/jade/docs/3.x/ui/forms/index.jade
@@ -12,6 +12,9 @@ block hero-example
     input(value="Subscribe" type="submit" role="button")
 
 block basic
+  :markdown
+    Forms take several orientations and have versatile validation styles.
+
   // For testing
     - var $types = ['button', 'color', 'date', 'datetime', 'datetime-local', 'email', 'file', 'image', 'month', 'number', 'password', 'tel', 'search', 'text', 'time', 'url', 'week']
     - for $type in $types
