--- a/lib/jade/docs/3.x/ui/images/index.jade
+++ b/lib/jade/docs/3.x/ui/images/index.jade
@@ -8,6 +8,10 @@ block hero-title
 
 block basic
   :markdown
+    All images are given some baseline styling to make them work best within content.
+    Here are some additional styles that are helpful in getting content and images to live 
+    in harmony:
+
     ## Image treatments
 
     ### Bordered
