--- a/lib/jade/docs/3.x/ui/labels/index.jade
+++ b/lib/jade/docs/3.x/ui/labels/index.jade
@@ -20,6 +20,10 @@ block hero-example
     span.label.label-violet Exciting
 
 block basic
+  :markdown
+    Labels are simple inline containers that share some of the base element styling in Kickstart.
+    Great for drawing attention without visual overload.
+
   .example
     span.label Attention
 
