--- a/lib/jade/docs/3.x/ui/modals/index.jade
+++ b/lib/jade/docs/3.x/ui/modals/index.jade
@@ -7,6 +7,11 @@ block hero-example
   button.button.blue#launchSampleModal Launch modal
 
 block basic
+  :markdown
+    Modals in Kickstart are unique in that their backdrop and containers
+    are one HTML element. This makes working with modals in JavaScript
+    incredibly straightforward.
+
   #sampleModal.modal
     header
       h1.toc-exempt Modal
