--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -39,6 +39,9 @@ block hero-example
 
 block basic
   :markdown
+    Navigation items have been meticulously designed to be very straightforward,
+    semantic, and dependent on sensible defaults.
+
     ## Bars
 
     Navigation bars consist of three elements:
