--- a/lib/jade/docs/3.x/ui/notifications/index.jade
+++ b/lib/jade/docs/3.x/ui/notifications/index.jade
@@ -10,6 +10,9 @@ block hero-example
 
 block basic
   :markdown
+    Notifications give your site an application-like feel by providing dynamic
+    messaging components that work in real time and organize themselves.
+
     ## Statuses
 
     Statuses are once-only notifications best for streaming system information.
