--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -33,6 +33,11 @@ block hero-example
   +colors
 
 block basic
+  :markdown
+    Tooltips in Kickstart come in many flavors with an optional additional element
+    for specifying the part of the html that will trigger the appearance of the 
+    tooltip(s)
+
   h2 Single element
 
   .example
