--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -28,7 +28,7 @@ block basic
     a tabbed content area.
 
   ul.tabs
-    li: a(href="#land") Land
+    li.open: a(href="#land") Land
     li: a(href="#air") Air
     li: a(href="#sea") Sea
 
@@ -42,7 +42,7 @@ block basic
     <span>
 
         <ul class="tabs" id="animals">
-          <li>
+          <li class="open">
             <a href="#land">Land</a>
           </li>
           <li>
