--- a/lib/sass/components/_tabs.sass
+++ b/lib/sass/components/_tabs.sass
@@ -1,2 +1,27 @@
 =tabs-default
+  +list($style: 'unstyled horizontal')
+  border-bottom: 1px solid map-get($white, darker)
+
+  li
+    margin: 0
+      left: -1px
+      bottom: -1px
+
+    &.open
+      a
+        border-bottom-color: transparent
+        background: white
+
+        &:hover, &.active
+          box-shadow: none
+
+    a
+      +button
+      border: 1px solid map-get($white, darker)
+      padding:
+        left: map-get($rootElement, paddingH)
+        right: map-get($rootElement, paddingH)
+      border-bottom-left-radius: 0
+      border-bottom-right-radius: 0
+
   @content
