Adding tests for tabs

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -93,6 +93,15 @@ html(lang='en')
       // Designated for doing screencaps
       button.signup Sign up
 
+    ul#test-tabs
+      li.open#tab-holder-one: a#tab-one(href="#panel-one")
+      li#tab-holder-two: a#tab-two(href="#panel-two")
+      li#tab-holder-three: a#tab-three(href="#panel-three")
+
+    article#panel-one foo
+    article#panel-two foo
+    article#panel-three foo
+
 
     footer
       script.
