Adding another test for tabs

--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -27,7 +27,7 @@ block basic
     sections will automatically show and hide as you would expect from
     a tabbed content area.
 
-  ul.tabs
+  ul.tabs#tab-example2
     li.open: a(href="#land") Land
     li: a(href="#air") Air
     li: a(href="#sea") Sea
@@ -88,3 +88,4 @@ block postJS
   script.
     k$.nav('.docs-nav')
     k$.tabs('#tab-example1')
+    k$.tabs('#tab-example2')
