Adding open class to articles, but not cancelling out opens yet.

--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -28,15 +28,15 @@ block basic
     a tabbed content area.
 
   ul.tabs#tab-example2
-    li.open: a(href="#land") Land
-    li: a(href="#air") Air
-    li: a(href="#sea") Sea
+    li.open: a(href="#modern") Modern
+    li: a(href="#old") Old
+    li: a(href="#ancient") Ancient
 
-  article#land Turtle
+  article#modern Internet
 
-  article#air Bird
+  article#old Encyclopedia
 
-  article#sea Fish
+  article#ancient Papyrus
 
   :markdown
     <span>
