Adding a bit more magic

--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -32,11 +32,10 @@ block basic
     li: a(href="#old") Old
     li: a(href="#ancient") Ancient
 
-  article#modern Internet
-
-  article#old Encyclopedia
-
-  article#ancient Papyrus
+  .tab-articles
+    article#modern Internet
+    article#old Encyclopedia
+    article#ancient Papyrus
 
   :markdown
     <span>
