Passing all tests for tabs

--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -8,7 +8,7 @@ block hero-title
 
 block hero-example
   ul.tabs#tab-example1
-    li: a(href="#land") Land
+    li.open: a(href="#land") Land
     li: a(href="#air") Air
     li: a(href="#sea") Sea
 
